update nested document

--- a/Mongodb-Project-Nodejs/views/result.ejs
+++ b/Mongodb-Project-Nodejs/views/result.ejs
@@ -6,5 +6,7 @@
 <p>Class: <%=result.class%></p>
 <p>Test: <%= test.name%></p>
 <div class="score"><p><%= result.score%></p></div>
+<br>
+<a href="/">Home</a>
 
 <% include layouts/footer%>
