--- a/Mongodb-Project-Nodejs/views/edit.ejs
+++ b/Mongodb-Project-Nodejs/views/edit.ejs
@@ -5,15 +5,15 @@
     <div class='question_template'>
 
             <br>
-            <b>Question:</b> <input type="text" name="question" value="<%= q.text%>" size='60px'>
+            <b>Question:</b> <input type="text" name="question" value="<%= q.details.text%>" size='60px'>
             <input type="hidden" name="id" value="<%= q._id%>">
             
                     <div class="row">
-              <%q.answers.forEach(function(answer, i) {%>
+              <%q.details.answers.forEach(function(answer, i) {%>
                 <div class="six columns <%= index%>">
                     <b>Option <%=i%>:</b> <input type="text" name="<%= arr[i]%>" value="<%=answer%>"></input>
                    
-                    <input <%= q.correct_answer == arr[i] ? 'checked' : null %> type="radio" name="correct[<%=index%>]" value="<%=arr[i]%>" ></input>
+                    <input <%= q.details.correct_answer == arr[i] ? 'checked' : null %> type="radio" name="correct[<%=index%>]" value="<%=arr[i]%>" ></input>
                 </div>
              <% }) %>  
           </div>
